--- a/builderbid.API/appsettings.json
+++ b/builderbid.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=builderbid; Uid=mephod; Pwd=29HYperflask1!!"
+    "DefaultConnection": "Server=localhost; Database=builderbid; Uid=mephod; Pwd=IWt72d2T0tw!!"
   },
   "Logging": {
     "LogLevel": {
